securing api host

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+.gitignore
 # dependencies
 /node_modules
 /.pnp
@@ -8,11 +8,16 @@
 # testing
 /coverage
 
+#vs-code settings 
+.vscode/settings.json
+.vscode/
+
 # production
 /build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
