--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -22,5 +22,5 @@
 		"titleBar.inactiveForeground": "#15202b99"
 	},
 	"peacock.color": "#61dafb",
-	"cSpell.words": ["crossdomain"]
+	"cSpell.words": ["crossdomain", "formik"]
 }
